js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib1/l1.8.kt
class MyClass {
    companion object {
        val intProperty: Int
            get() = 4
    }
}
